<resources>
    <string name="app_name">Decibels</string>
    <string name="comp_name">Alpha Studios</string>
    <string name="comp_slg">Quality Audio Solutions</string>
    <string name="login_msg">Welcome to Login Page</string>
    <string name="username_text">Type Your Username</string>
    <string name="password_text">Type Your Password</string>
    <string name="not_a_member_signup">Not a member? SignUp</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="Login_Title">Login</string>
    <string name="SignIn_Title">Sign-In</string>
    <string name="already_a_member">Already a member ?</string>
    <string name="signin_btn">Sign-In</string>
    <string name="or_signin_with">or SignIn with</string>
    <string name="set_minimum_8_character_password">Set Minimum 8 Character Password</string>
    <string name="set_username">Set Username</string>
    <string name="your_contact_number">Your Contact Number</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lehraDo">Lehra Do</string>
    <string name="saayiaa">Saaiyaan</string>
    <string name="behtihawasa">Behti Hawa Sa Tha Vo </string>
    <string name="suriliakhiyowale">Surili Akhiyo Wale</string>

    <string name="artistlehraDo">Pritam, Arjit Singh</string>
    <string name="artistsaayiaa">Rahat Fateh Ali Khan</string>
    <string name="artistbehtihawasa">Shaan </string>
    <string name="artistsuriliakhiyowale">Rahat Fateh Ali Khan</string>
    <string name="india_s_classical">India\'s Classical</string>
    <string name="aryan_khode">Aryan Khode</string>

    <string name="Lyrics_indian_classical">__Gentle Instruments Playing__</string>
    <string name="Lyrics_lehra_do">Apna Hai Din Yeh Aaj Ka

Duniya Se Jaake Bol Do

Bol Do

Aise Jaago Re Sathiyon
Duniya Ki Aankhein Khol Do
Khol Do

Lehra Do Lehra Do
Sarkashi Ka Parcham Lehra Do
Gardish Mein Phir Apni
Sar Zameen Ka Parcham Lehra Do

Lehra Do Lehra Do
Sarkashi Ka Parcham Lehra Do
Gardish Mein Phir Apni
Sar Zameen Ka Parcham Lehra Do

Ho Hath Dharke Baithne Se
Kya Bhala Kuchh Hota Hai
Ho Hath Dharke Baithne Se
Kya Bhala Kuchh Hota Hai

Ja Lakeeron Ko Dikha
Kya Zor Baju Hota Hai
Ja Lakeeron Ko Dikha
Kya Zor Baju Hota Hai

Himmat-E-Marda Agar Ho
Sang Khuda Bhi Hota Hai
Ja Zamane Ko Dikha De
Khud Mein Dum Kya Hota Hai

Lehra Do Lehra Do
Sarkashi Ka Parcham Lehra Do
Gardish Mein Phir Apni
Sar Zameen Ka Parcham Lehra Do

Lehra Do Lehra Do
Sarkashi Ka Parcham Lehra Do
Gardish Mein Phir Apni
Sar Zameen Ka Parcham Lehra Do

Lehra Do Lehra Do
Lehra Do Lehra Do
Lehra Do Lehra Do
Lehra Do Lehra Do..

Lehra Do Lehra Do
Sarkashi Ka Parcham Lehra Do
Gardish Mein Phir Apni
Sar Zameen Ka Parcham Lehra Do

Written by: Kausar Munir

    </string>
    <string name="Lyrics_saayiaan">(Chorus)

Saaiyaan mere saaiyaan… (repeated)

        (Verse 1)

Mere saaiyaan re, saaiyaan re (mere saiyaa re)
Saaiyaan mere saaiyaan… (repeated)

Saancha bole naa jhootha mahiya re
Mere saaiyaan re, saaiyaan re
Jhoothi maaya ka jhootha hai jiya re ho o
Ab kis disha jaaun, kit main basera paaun
Tu jo thaame sambhal jaaun o ho
Saiyan mere saaiyaan… (repeated)

(Verse 2)

Daaman mein samete andhera
Laayi hai behrupiya roshni
Ho o loriyaan gaaye toh
Ninde jal jaati hai
Laage kalsooni chandni
Mere saaiyaan re, saaiyaan re
Dil sheeshe ka toota aashiyaan re o ho
Ab kis disha jaaun, kit main basera paaun

(Chorus)

Saaiyaan mere saaiyaan… (repeated)


    </string>
    <string name="Lyrics_behti_hawasa">
        Bahti hawa sa tha वो (woh)
Udti patang tha वो (woh)

Kahaan gaya use dhoondo (dhoondo)
Udti patang sa tha वो (woh)

Kahaan gaya use dhoondo (dhoondo)

Humko toh raah thi chalati woh
Khud apni raah banata girta sambhalta
Masti mein चलता था वो (chalta tha woh)

Humko kal ki fikr satati woh
Bas aaj ka jashn manata har lamhe ko khul ke
Jeta tha woh (jeeta tha woh)

Kahaan se aaya tha woh (woh)
Chhuke humare dil ko kahaan gaya use (use)
    </string>

    <string name="Lyrics_surili_akhiyowale">
        Surili Akhiyon Wale (सुरीली आंखों वाले)

Surili Akhiyon Wale (सुरीली आंखों वाले)
Suna hai teri Aankhon Se (सुना है तेरी आंखों से)

(Chorus)
Behti hai Neendein Aur (बहती हैं नींदें और)
Neendon mein Sapne (नींदों में सपने)
Kabhi to Kinare Pe (कभी तो किनारे पे)
Utar mere Sapno Se (उतर मेरे सपनों से)

Aaja Zameen Pe (आजा ज़मीन पे)
Aur Mil ja Kahin Pe (और मिल जा कहीं पे)
Mil ja Kahin (मिल जा कहीं)
Oooooooooo (ओहोहोहो)

Mil ja Kahin Samey se Parey (मिल जा कहीं समय से परे)
Samey se Parey (समय से परे)
Mil ja Kahin (मिल जा कहीं)

Tu bhi Akhiyon se Kabhi (तू भी आंखों से कभी)
Meri Akhiyon Ki Sunn (मेरी आंखों की सुन)

Surili Akhiyon Wale (सुरीली आंखों वाले)
Suna hai teri Aankhon Se (सुना है तेरी आंखों से)

Jaane Tu Kahan Hai (जाने तू कहां है)
Udti Hawa Pe Tere Pairon ke Nishan Dekhe (उड़ती हवा पे तेरे पैरों के निशान देखे)
Jaane Tu Kahan Hai (जाने तू कहां है)
Udti Hawa Pe Tere Pairon ke Nishan Dekhe (उड़ती हवा पे तेरे पैरों के निशान देखे)

Doondha hai Zameen Pe (ढूंढा है ज़मीन पे)
Chana hai Falak Pe (चाहना है फलक पे)
Saare Aasman Dekhe (सारे आसमान देखे)

Mil ja Kahin Samey se Parey (मिल जा कहीं समय से परे)
Samey se Parey (समय से परे)
Mil ja Kahin (मिल जा कहीं)

Tu bhi Akhiyon se Kabhi (तू भी आंखों से कभी)
Meri Akhiyon Ki Sunn (मेरी आंखों की सुन)

(Chorus)
Behti hai Neendein Aur (बहती हैं नींदें और)
Neendon mein Sapne (नींदों में सपने)
Kabhi to Kinare Pe (कभी तो किनारे पे)
Utar mere Sapno Se (उतर मेरे सपनों से)

Dekh Rahe The Chanda Ke Peechhe Peechhe The (देख रहे थे चांद के पीछे पीछे थे)
Sara Jahan Dekha Dekha Na Aakhon Mein (सारा जहां देखा देखा ना आंखों में)
Palkon Ke Neeche The (पलकों के नीचे थे)

Aa Chal Kahin (आ चल कहीं)
Samey se Parey (समय से परे)
Chal De Kahin (चल दे कहीं)
Tujh Bhi Akhiyon Se Kabhi (तू भी आंखों से कभी)
Meri Akhiyon Ki Sunn (मेरी आंखों की सुन)

Surili Akhiyon Wale (सुरीली आंखों वाले)
Suna de Zara Akhiyon Se (सुना दे जरा आंखों से)
Surili Akhiyon Wale (सुरीली आंखों वाले)
Suna de Zara Akhiyon Se (सुना दे जरा आंखों से)
    </string>
    <string name="title_activity_video_library">VideoLibrary</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>